// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Toast /> renders error 1`] = `
<div
  className="container-0-2-1 container_danger-0-2-4"
>
  <div>
    <Text
      inverted={true}
    >
      Error
    </Text>
  </div>
  <div
    className="right-0-2-5"
  >
    <IconButton
      inverted={true}
      onClick={[Function]}
    >
      <IconClose
        accessibilityLabel="Close"
        size="1.5em"
      />
    </IconButton>
  </div>
</div>
`;

exports[`<Toast /> renders message 1`] = `
<div
  className="container-0-2-1"
>
  <div>
    <Text
      inverted={true}
    >
      Hi
    </Text>
  </div>
  <div
    className="right-0-2-5"
  >
    <IconButton
      inverted={true}
      onClick={[Function]}
    >
      <IconClose
        accessibilityLabel="Close"
        size="1.5em"
      />
    </IconButton>
  </div>
</div>
`;

exports[`<Toast /> renders refresh 1`] = `
<div
  className="container-0-2-1"
>
  <div>
    <Text
      bold={true}
      inverted={true}
    >
      A new version is available
    </Text>
    <Spacing
      top={0.5}
    >
      <Button
        onClick={[Function]}
        small={true}
      >
        <Translate
          context="Refresh the page that was triggerd by a toast"
          phrase="Refresh"
        />
      </Button>
    </Spacing>
  </div>
  <div
    className="right-0-2-5"
  >
    <IconButton
      inverted={true}
      onClick={[Function]}
    >
      <IconClose
        accessibilityLabel="Close"
        size="1.5em"
      />
    </IconButton>
  </div>
</div>
`;

exports[`<Toast /> sets failed class 1`] = `
<div
  className="container-0-2-1 container_danger-0-2-4"
>
  <div>
    <Text
      inverted={true}
    >
      Hi
    </Text>
  </div>
  <div
    className="right-0-2-5"
  >
    <IconButton
      inverted={true}
      onClick={[Function]}
    >
      <IconClose
        accessibilityLabel="Close"
        size="1.5em"
      />
    </IconButton>
  </div>
</div>
`;

exports[`<Toast /> sets failed class if an \`Error\` 1`] = `
<div
  className="container-0-2-1 container_danger-0-2-4"
>
  <div>
    <Text
      inverted={true}
    >
      Hi
    </Text>
  </div>
  <div
    className="right-0-2-5"
  >
    <IconButton
      inverted={true}
      onClick={[Function]}
    >
      <IconClose
        accessibilityLabel="Close"
        size="1.5em"
      />
    </IconButton>
  </div>
</div>
`;

exports[`<Toast /> sets success class 1`] = `
<div
  className="container-0-2-1 container_success-0-2-3"
>
  <div>
    <Text
      inverted={true}
    >
      Hi
    </Text>
  </div>
  <div
    className="right-0-2-5"
  >
    <IconButton
      inverted={true}
      onClick={[Function]}
    >
      <IconClose
        accessibilityLabel="Close"
        size="1.5em"
      />
    </IconButton>
  </div>
</div>
`;
